--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
      <a href="https://www.podzvonek.cz/">podzvonek.cz</a><br>
      <a href="2.html">Druhý soubor</a><br>
      <a href="data/3.html">Třetí soubor</a><br> 
+    </h1>
+     <p> 
+     <p>I am hosted with GitHub Pages.
     </p> 
   </body>
 </html>
