--- a/index.html
+++ b/index.html
@@ -9,22 +9,41 @@
     <meta name='robots' content='all'>
     <!-- <meta http-equiv='X-UA-Compatible' content='IE=edge'> -->
     <link href='/favicon.png' rel='shortcut icon' type='image/png'>
+    <link rel="stylesheet" href="muj.css" type="text/css">
   </head>
   <body style="background-color: orange;">
    <h1 style="text-align:center;font-size:60px">
     Kroužek robotiky a 3D tisku
    </h1>
     <p style="text-align:center">
-     Robotika
-    </p>
+     <img src="6b.png" title="nazev-tridy" height="250" width="400"><br>
+      </p>
+      <p style="text-align:center">
+       Picture created in Blender
+      </p>
+        <table border="1" width="60%" style="text-align:center" align="center"><tr>
+        <td></td>
+        <td>skupina 1</td>
+        <td>skupina 2</td>
+        </tr><tr>
+        <td>leden 2021</td>
+        <td>EV3 projekt</td>
+        <td>Blender projekt</td>
+        </tr><tr>
+        <td>únor 2021</td>
+        <td>Blender projekt</td>
+        <td>EV3 projekt</td>
+        </tr></table>
+    <h2 style="text-align:center">
+     Třídy 6.B
+    </h2>
     <p style="text-align:center">
-     3D tisk<br>
+     Robotika a 3D tisk<br>
+     <a href="2.html">Ukázky modelů</a><br>
      <a href="https://www.podzvonek.cz/">podzvonek.cz</a><br>
-     <a href="2.html">Druhý soubor</a><br>
-     <a href="data/3.html">Třetí soubor</a><br> 
-    </h1>
-     <p> 
-     <p>I am hosted with GitHub Pages.
-    </p> 
+     </p>
+     <p style="text-align:center">
+     I am hosted with GitHub Pages.<br>
+     </p>
   </body>
 </html>
