--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     Kroužek robotiky a 3D tisku
    </h1>
     <p style="text-align:center">
-     <img src="6b.png" title="nazev-tridy" height="250" width="400"><br>
+     <img src="6b.jpg" title="nazev-tridy" height="250" width="400"><br>
       </p>
       <p style="text-align:center">
        Picture created in Blender
