--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <p style="text-align:center">
        Picture created in Blender
       </p>
-        <table class="tablestyle"><tr>
+        <table class="styled-table"><tr>
         <td></td>
         <td>skupina 1</td>
         <td>skupina 2</td>
