--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang='cs'>
   <head>
@@ -12,37 +13,61 @@
     <link rel="stylesheet" href="muj.css" type="text/css">
   </head>
   <body style="background-color: orange;">
-   <h1 style="text-align:center;font-size:60px">
+   <h1 style="font-size:60px">
     Kroužek robotiky a 3D tisku
    </h1>
-    <p style="text-align:center">
-     <img src="6b.jpg" title="nazev-tridy" height="250" width="400"><br>
+    <p>
+     <img src="6b.png" title="nazev-tridy" height="250" width="400"><br>
       </p>
-      <p style="text-align:center">
-       Picture created in Blender
+      <p>
+       Picture created in Blender<br>
       </p>
-        <table class="styled-table"><tr>
-        <td></td>
-        <td>skupina 1</td>
-        <td>skupina 2</td>
-        </tr><tr>
-        <td>leden 2021</td>
-        <td>EV3 projekt</td>
-        <td>Blender projekt</td>
-        </tr><tr>
-        <td>únor 2021</td>
-        <td>Blender projekt</td>
-        <td>EV3 projekt</td>
-        </tr></table>
-    <h2 style="text-align:center">
+        <table class="center">
+        <tr>
+          <th class="thcolor1">měsíc</th>
+          <th class="thcolor5">skupina 1</th>
+          <th class="thcolor5">skupina 2</th>
+          <th class="thcolor5">skupina 3</th>
+          <th class="thcolor5">skupina 4</th>
+        </tr>
+        <tr>
+          <th class="thcolor1">leden</th>
+          <th>EV3</th>
+          <th class="thcolor2">Blender</th>
+          <th class="thcolor4">Scratch</th>
+          <th class="thcolor3">Inkscape</th>
+        </tr>
+        <tr>
+          <th class="thcolor1">únor</th>
+          <th class="thcolor4">Scratch</th>
+          <th>EV3</th>
+          <th class="thcolor3">Inkscape</th>
+          <th class="thcolor2">Blender</th>
+        </tr>
+        <tr>
+          <th class="thcolor1">březen</th>
+          <th class="thcolor2">Blender</th>
+          <th class="thcolor4">Scratch</th>
+          <th>EV3</th>
+          <th class="thcolor3">Inkscape</th>
+        </tr>
+        <tr>
+          <th class="thcolor1">duben</th>
+          <th class="thcolor3">Inkscape</th>
+          <th class="thcolor2">Blender</th>
+          <th class="thcolor4">Scratch</th>
+          <th>EV3</th>
+        </tr>
+        </table>
+    <h2>
      Třídy 6.B
     </h2>
-    <p style="text-align:center">
+    <p>
      Robotika a 3D tisk<br>
      <a href="2.html">Ukázky modelů</a><br>
      <a href="https://www.podzvonek.cz/">podzvonek.cz</a><br>
      </p>
-     <p style="text-align:center">
+     <p>
      I am hosted with GitHub Pages.<br>
      </p>
   </body>
