--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang='cs'>
   <head>
@@ -13,61 +12,37 @@
     <link rel="stylesheet" href="muj.css" type="text/css">
   </head>
   <body style="background-color: orange;">
-   <h1 style="font-size:60px">
+   <h1 style="text-align:center;font-size:60px">
     Kroužek robotiky a 3D tisku
    </h1>
-    <p>
+    <p style="text-align:center">
      <img src="6b.png" title="nazev-tridy" height="250" width="400"><br>
       </p>
-      <p>
-       Picture created in Blender<br>
+      <p style="text-align:center">
+       Picture created in Blender
       </p>
-        <table class="center">
-        <tr>
-          <th class="thcolor1">měsíc</th>
-          <th class="thcolor5">skupina 1</th>
-          <th class="thcolor5">skupina 2</th>
-          <th class="thcolor5">skupina 3</th>
-          <th class="thcolor5">skupina 4</th>
-        </tr>
-        <tr>
-          <th class="thcolor1">leden</th>
-          <th>EV3</th>
-          <th class="thcolor2">Blender</th>
-          <th class="thcolor4">Scratch</th>
-          <th class="thcolor3">Inkscape</th>
-        </tr>
-        <tr>
-          <th class="thcolor1">únor</th>
-          <th class="thcolor4">Scratch</th>
-          <th>EV3</th>
-          <th class="thcolor3">Inkscape</th>
-          <th class="thcolor2">Blender</th>
-        </tr>
-        <tr>
-          <th class="thcolor1">březen</th>
-          <th class="thcolor2">Blender</th>
-          <th class="thcolor4">Scratch</th>
-          <th>EV3</th>
-          <th class="thcolor3">Inkscape</th>
-        </tr>
-        <tr>
-          <th class="thcolor1">duben</th>
-          <th class="thcolor3">Inkscape</th>
-          <th class="thcolor2">Blender</th>
-          <th class="thcolor4">Scratch</th>
-          <th>EV3</th>
-        </tr>
-        </table>
-    <h2>
+        <table border="1" width="60%" style="text-align:center" align="center"><tr>
+        <td></td>
+        <td>skupina 1</td>
+        <td>skupina 2</td>
+        </tr><tr>
+        <td>leden 2021</td>
+        <td>EV3 projekt</td>
+        <td>Blender projekt</td>
+        </tr><tr>
+        <td>únor 2021</td>
+        <td>Blender projekt</td>
+        <td>EV3 projekt</td>
+        </tr></table>
+    <h2 style="text-align:center">
      Třídy 6.B
     </h2>
-    <p>
+    <p style="text-align:center">
      Robotika a 3D tisk<br>
      <a href="2.html">Ukázky modelů</a><br>
      <a href="https://www.podzvonek.cz/">podzvonek.cz</a><br>
      </p>
-     <p>
+     <p style="text-align:center">
      I am hosted with GitHub Pages.<br>
      </p>
   </body>
