--- a/index.html
+++ b/index.html
@@ -21,19 +21,43 @@
       <p style="text-align:center">
        Picture created in Blender
       </p>
-        <table border="1" width="60%" style="text-align:center" align="center"><tr>
-        <td></td>
-        <td>skupina 1</td>
-        <td>skupina 2</td>
-        </tr><tr>
-        <td>leden 2021</td>
-        <td>EV3 projekt</td>
-        <td>Blender projekt</td>
-        </tr><tr>
-        <td>únor 2021</td>
-        <td>Blender projekt</td>
-        <td>EV3 projekt</td>
-        </tr></table>
+       <table class="center">
+        <tr>
+          <th class="thcolor1">měsíc</th>
+          <th class="thcolor5">skupina 1</th>
+          <th class="thcolor5">skupina 2</th>
+          <th class="thcolor5">skupina 3</th>
+          <th class="thcolor5">skupina 4</th>
+        </tr>
+        <tr>
+          <th class="thcolor1">leden</th>
+          <th>EV3</th>
+          <th class="thcolor2">Blender</th>
+          <th class="thcolor4">Scratch</th>
+          <th class="thcolor3">Inkscape</th>
+        </tr>
+        <tr>
+          <th class="thcolor1">únor</th>
+          <th class="thcolor4">Scratch</th>
+          <th>EV3</th>
+          <th class="thcolor3">Inkscape</th>
+          <th class="thcolor2">Blender</th>
+        </tr>
+        <tr>
+          <th class="thcolor1">březen</th>
+          <th class="thcolor2">Blender</th>
+          <th class="thcolor4">Scratch</th>
+          <th>EV3</th>
+          <th class="thcolor3">Inkscape</th>
+        </tr>
+        <tr>
+          <th class="thcolor1">duben</th>
+          <th class="thcolor3">Inkscape</th>
+          <th class="thcolor2">Blender</th>
+          <th class="thcolor4">Scratch</th>
+          <th>EV3</th>
+        </tr>
+        </table>
     <h2 style="text-align:center">
      Třídy 6.B
     </h2>
