--- a/2.html
+++ b/2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='cs'>
   <head>
-    <title>'Ukázky modelů'</title>
+    <title>"Ukázky modelů"</title>
     <meta charset='utf-8'>
     <meta name='description' content=''>
     <meta name='keywords' content=''>
