--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <p style="text-align:center">
      Robotika a 3D tisk<br>
      <a href="2.html">Ukázky modelů</a><br>
+      <a href="konicek.html">Žákovský projekt</a><br>
      <a href="https://www.podzvonek.cz/">podzvonek.cz</a><br>
      </p>
      <p style="text-align:center">
